--- a/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.scss
+++ b/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.scss
@@ -30,4 +30,21 @@
 	.fa-refresh {
 		cursor: pointer;
 	}
+
+	// .vehicle {
+	// 	font-size: 11px;
+	// 	color: #3a7ca4;
+	// 	margin-right: 5px;
+	// }
+	.fa-wheelchair {
+		// padding: 3px;
+		// border-radius: 3px;
+		color: #2173a5;
+		font-weight: bold;
+		// padding: 3px;
+		// border: 1px solid #666;
+		// border-radius: 3px;
+		// color: #fff;
+		// background: #1b78bb;
+	}
 }
