refactor(transcol-online): melhora código

--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -65,6 +65,14 @@
 		border: 2px solid #003e50;
 	}
 
+	.marker-available-destination {
+		color: #003e50;
+	}
+
+	.marker-available-destination> i {
+		border: 2px solid #003e50;
+	}
+
 	// origin marker
 	.marker-origin {
 		color: darkgoldenrod;
