--- a/src/app/ceturb/transcol-online/transcol-online.component.html
+++ b/src/app/ceturb/transcol-online/transcol-online.component.html
@@ -45,29 +45,29 @@
                     on-swipe-left="::vm.showOriginPrevisions()" 
                     on-destination-click="::vm.selectStop(destination);">
                 </destination-list>
-                <prevision-list 
+                <origin-previsions-list 
                     class="clickable"
                     ng-class="{ 'shown': vm.isShowingOriginPrevisions }"
-                    title="Previsões ({{vm.previsions.length}} linhas)" 
+                    origin="vm.selectedOrigin" 
                     previsions="vm.previsions" 
                     on-swipe-right="::vm.showDestinations()"
                     on-prevision-click="::vm.showLinePrevisions({ identificadorLinha: prevision.identificadorLinha, linhaId: prevision.linhaId, pontoDeOrigemId: prevision.pontoDeOrigemId })" 
                     on-refresh-click="::vm.getOriginPrevisions(vm.selectedOrigin.id)">
-                </prevision-list>
-                <line-prevision-list 
+                </origin-previsions-list>
+                <line-previsions-list 
                     ng-class="{ 'shown': vm.isShowingLinePrevisions }"
                     title="Previsões para a linha {{vm.selectedLine.identificadorLinha}}" 
                     line="vm.selectedLine.identificadorLinha"
                     previsions="vm.previsions"
                     on-swipe-right="::vm.showOriginPrevisions()"
                     on-refresh-click="::vm.getLinePrevisions(vm.selectedLine)">
-                </line-prevision-list>
-                <route-prevision-list
+                </line-previsions-list>
+                <route-previsions-list
                     ng-class="{ 'shown': isShowingRoutePrevisions }" 
                     title="Previsões para a rota" 
                     previsions="vm.previsions"
                     on-refresh-click="::vm.getRoutePrevisions( this.selectedOrigin.id, this.selectedDestination.id )()">
-                </route-prevision-list>
+                </route-previsions-list>
             </div>
         </div>
         <search-bar 
