--- a/src/app/ceturb/transcol-online/destination-list/destination-list.component.scss
+++ b/src/app/ceturb/transcol-online/destination-list/destination-list.component.scss
@@ -1,3 +1,16 @@
+.destinations__page-title{
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    padding: 8px;
+    margin-bottom: 5px;
+    background: #f5f5f5;
+    justify-content: center;
+    i, strong {
+        font-size: 16px;
+    }
+}
+
 .destination-list .destination-list__reference {
 	font-size: 13px;
 	color: #707070;
