--- a/src/app/layout/search-bar/search-bar.component.scss
+++ b/src/app/layout/search-bar/search-bar.component.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     top: 0;
 
+    body.platform-ios & {
+        top: 32px;    
+    }
+
     .front-icon {
         i {
             margin-left: 5px;
