fix(transcol-online): corrige posicionamento ios

--- a/src/app/layout/search-bar/search-bar.component.html
+++ b/src/app/layout/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<div class="bar bar-subheader search-bar">
+<div class="bar search-bar">
     <md-input-container md-no-float class="md-block md-whiteframe-2dp">
         <md-icon ng-if="::$ctrl.icon" class="front-icon">
             <i class="fa {{$ctrl.icon}}" aria-hidden="true"></i>
