fix(transcol-online): corrige label de previsão

--- a/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
+++ b/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
@@ -40,7 +40,7 @@
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'red'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há mais de 36 min.</strong></div>
+            <div class="map-labels__description">Localização transmitida <strong>há menos de 36 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'gray'}">
