--- a/src/app/ceturb/transcol-online/line-previsions-list/line-previsions-list.component.scss
+++ b/src/app/ceturb/transcol-online/line-previsions-list/line-previsions-list.component.scss
@@ -23,7 +23,8 @@
 
 .line-previsions {
     
-    height: 50vh !important;
+    position: relative;
+	height: calc( 100vh - 280px );
     
     md-list-item {
         width: 100% !important;
