--- a/src/app/ceturb/transcol-online/origin-previsions-list/origin-previsions-list.component.scss
+++ b/src/app/ceturb/transcol-online/origin-previsions-list/origin-previsions-list.component.scss
@@ -22,6 +22,8 @@
 }
 
 .prevision-list {
+	position: relative;
+	height: calc( 100vh - 280px );
 
 	md-list-item._md-button-wrap>div.md-button:first-child {
 		padding: 0;
@@ -29,7 +31,7 @@
 
     .disabled * {
         color: #666 !important;
-	}
+    }
 
     .container {
         width: 100%;
