--- a/src/app/ceturb/transcol-online/route-previsions-list/route-previsions-list.component.html
+++ b/src/app/ceturb/transcol-online/route-previsions-list/route-previsions-list.component.html
@@ -6,7 +6,7 @@
 </div>
 <md-list ng-if="$ctrl.previsions.length" class="route-previsions">
     <ion-content>
-        <md-list-item collection-repeat="prevision in $ctrl.previsions" item-height="45" md-no-ink>
+        <md-list-item collection-repeat="prevision in $ctrl.previsions" item-height="45" item-width="100%" md-no-ink>
             <div class="route-previsions__body">
                 <span>
                         <strong>{{ prevision.identificadorLinha }}</strong>
