--- a/src/app/ceturb/transcol-online/route-previsions-list/route-previsions-list.component.scss
+++ b/src/app/ceturb/transcol-online/route-previsions-list/route-previsions-list.component.scss
@@ -13,7 +13,8 @@
 
 .route-previsions {
 
-    height: 50vh !important;
+    position: relative;
+	height: calc( 100vh - 300px );
     
     md-list-item {
         width: 100% !important;
