--- a/src/app/ceturb/transcol-online/destination-list/destination-list.component.scss
+++ b/src/app/ceturb/transcol-online/destination-list/destination-list.component.scss
@@ -1,3 +1,7 @@
+.auto-complete-panel .destinations__page-title {
+    display: none;
+}
+
 .destinations__page-title{
     display: flex;
     justify-content: space-between;
@@ -10,6 +14,8 @@
         font-size: 16px;
     }
 }
+
+
 .destination-list {
     position: relative;
 	height: calc( 100vh - 245px );
