--- a/src/app/layout/search-bar/search-bar.component.html
+++ b/src/app/layout/search-bar/search-bar.component.html
@@ -1,7 +1,10 @@
 <div class="bar search-bar">
     <md-input-container md-no-float class="md-block md-whiteframe-2dp">
-        <md-icon ng-if="::$ctrl.icon" class="front-icon">
+        <md-icon ng-if="!$ctrl.searching && $ctrl.icon" class="front-icon">
             <i class="fa {{$ctrl.icon}}" aria-hidden="true"></i>
+        </md-icon>
+        <md-icon ng-if="$ctrl.searching" class="front-icon">
+            <i class="fa fa-spin fa-circle-o-notch"></i>
         </md-icon>
         <input class="input-search"
                ng-model="$ctrl.searchText"
@@ -13,6 +16,7 @@
                placeholder="{{$ctrl.placeholder}}" 
                input-return>
             <md-icon> </md-icon>
+            
             <md-icon ng-if="$ctrl.searchText" ng-click="$ctrl.searchText='';$ctrl.onClear()">
                 <i class="ion-android-close"></i>
             </md-icon>
