--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -252,7 +252,7 @@
 	}
 
 
-	.md-fab{
+	.stop-info__btn{
 		font-size: 1.7em;
 		position: absolute;
 		// top: -44px;
@@ -261,23 +261,79 @@
 		background-color: #003e50 !important;
 		margin: 0;
 	}
-	.stop-info__btn-favorite{
-		// right: 0%;
-	}
-
-	.stop-info__btn-routes{
-		// right: 14%;
-		right: 0;
-	}
-
-	.stop-info__btn-destination{
-		 // right: 28%;
-		 right: 19%
-	}
 
 	.leaflet-control-attribution { display: none;}
 
+	.favorites-bar {
+		position: absolute;
+		display: flex;
+		width: 100%;
+		bottom: 0;
+		justify-content: center;
+		z-index: 999;
+		padding: 15px 15px 5px 15px;
 
+		> * {
+			text-align: center;
+			color: #093340;
+			padding: 0 5px;
+			max-width: 110px;
+
+			.md-button  {
+				background: #093340 !important;
+				color: #fff !important;
+				font-size: 25px
+			}
+		}
+
+		// ref: https://codepen.io/martinwolf/pen/qlFdp
+		$font-size:10px;
+		$line-height: 1.4;
+		$lines-to-show: 2;
+
+		.favorites-bar__label {
+			display: block; /* Fallback for non-webkit */
+			display: -webkit-box;
+			height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+			margin: 0 auto;
+			font-size: $font-size;
+			line-height: $line-height;
+			-webkit-line-clamp: $lines-to-show;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		// .favorites-bar__label {
+		// 	// white-space: nowrap;
+		// 	// overflow: hidden;
+		// 	// text-overflow: ellipsis;
+		// 	// width: 100px;
+		// 	// font-size: 10px;
+		// 	// padding-right: 10px;
+
+		// 	overflow: hidden;
+		// 	text-overflow: ellipsis;
+		// 	max-width: 90px;
+		// 	font-size: 10px;
+		// 	padding-right: 5px;
+		// 	height: 28px;
+		// 	line-height: 1.4;
+		// 	-webkit-line-clamp: 2;
+		// 	-webkit-box-orient: vertical;
+		// 	margin: 0 auto;
+		// 	display: block;
+		// 	display: -webkit-box;
+		// }
+
+		background: rgba(255,255,255,0);
+		background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+		background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,1)));
+		background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+		background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+		background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+		background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
+	}
 
 	.auto-complete-panel{
 		background-color: white;
@@ -343,32 +399,45 @@
 		}
 	}
 
-	/* iPads (portrait) ----------- */
-	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+
+	.stop-info__btn-routes{ right: 0% }
+	.stop-info__btn-destination{ right: 20% }
+	.stop-info__btn-favorite{ 
+		right: 40%;
+
+		&.is-favorite {
+			color: rgb(255, 193, 7) !important;
+		}
+	}
+
+	
+
+	@media screen and (max-width : 320px) {
+		.stop-info__btn {
+			font-size: 1.5em;
+			top: -60px;
+			line-height: 46px;
+			width: 46px;
+			height: 46px;
+		}
+	}
+	@media screen and (min-width : 320px) {
+		.stop-info__btn-destination{ right: 18% }
+		.stop-info__btn-favorite{ right: 36% }
+	}
+
+	@media screen and (min-width : 375px) {
+		.stop-info__btn-destination{ right: 16% }
+		.stop-info__btn-favorite{ right: 32% }
+	}
+
+	@media screen and (min-width : 768px) {
 		.stop-info__btn-destination{ right: 8% }
-	}
-	/**********
-	iPad 3
-	**********/
-	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-		.stop-info__btn-destination{ right: 8% }
+		.stop-info__btn-favorite{ right: 16% }
 	}
 
-	/* iPhone 5 ----------- */
-	@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
-		.stop-info__btn-destination{ right: 11% }
-	}
-
-	@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
-		.stop-info__btn-destination{ right: 20% }
-	}
-
-	/* iPhone 4 ----------- */
-	@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-		.stop-info__btn-destination{ right: 13% }
-	}
-
-	@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-		.stop-info__btn-destination{ right: 20% }
+	@media screen and (min-width : 1024px) {
+		.stop-info__btn-destination{ right: 6% }
+		.stop-info__btn-favorite{ right: 12% }
 	}
 }
