--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -355,10 +355,10 @@
 		.stop-info__btn-favorite{ right: 36% }
 	}
 
-	@media screen and (min-width : 375px) {
-		.stop-info__btn-destination{ right: 17% }
-		.stop-info__btn-favorite{ right: 34% }
-	}
+	// @media screen and (min-width : 375px) {
+	// 	.stop-info__btn-destination{ right: 17% }
+	// 	.stop-info__btn-favorite{ right: 34% }
+	// }
 
 	@media screen and (min-width : 768px) {
 		.stop-info__btn-destination{ right: 8% }
